# rust-actix-practice

./: .gitignore  README.md
actix-backend/: .env  Cargo.toml
actix-backend/src/: lib.rs  main.rs  middleware.rs
actix-backend/src/services/: auth.rs  mod.rs
actix-backend/src/services/products/: create.rs  delete.rs  mod.rs  retrieve.rs  update.rs
rust_backend/: Cargo.toml
rust_backend/src/: db.rs  main.rs  models.rs
rust_backend/src/db/: database.rs
rust_backend/src/models/: users.rs
